# ai-agent-automation-hub

./: .dockerignore  .env.bot.template  .env.example  .gitignore  CHANGES_SUMMARY.md  DATABASE_CONFIGURATION_FIX_SUMMARY.md  DEPLOYMENT.md  DISCORD_APPROVAL_IMPLEMENTATION.md  DISCORD_BOT_IMPLEMENTATION_SUMMARY.md  DISCORD_MANUAL_TESTING_GUIDE.md  DISCORD_PERMISSIONS_FIX.md  DISCORD_SETUP_GUIDE.md  DISCORD_TIMEOUT_FIX_SUMMARY.md  Dockerfile  GITHUB_CLIENT_COMMIT_FIX.md  GITHUB_CLIENT_SUMMARY.md  LICENSE  LOCAL_SETUP_GUIDE.md  MANIFEST.in  Makefile  README.md  README_DISCORD_WORKFLOW.md  RELIABILITY_SYSTEM_COMPLETE.md  RELIABILITY_SYSTEM_GUIDE.md  TASK_EXECUTOR_SUMMARY.md  TESTING_AGENT_DEPLOYMENT_SUCCESS.md  TESTING_AGENT_IMPLEMENTATION.md  TESTING_AGENT_MONITORING_GUIDE.md  TEST_RESULTS_SUMMARY.md  debug_discord_commands.py  diagnose_discord.py  docker-compose.yml  docker-entrypoint.sh  guild_sync.py  health-check.py  pyproject.toml  requirements.txt  safety_monitor.py  setup.py  setup_local_test.py  (+11 more)
.github/workflows/: ci-cd.yml
agents/: __init__.py  backend_agent.py  base_agent.py  database_agent.py  orchestrator_agent.py
agents/backend/: Dockerfile  __init__.py  backend_agent.py  github_client.py  main.py  orchestrator_client.py  task_executor.py
agents/backend/routes/: test.py  user_login.py
agents/backend/services/: authenticate_user_credentials_service.py  authenticate_user_service.py
agents/orchestrator/: Dockerfile  commands.py  main.py  orchestrator.py  task_manager.py  utils.py
agents/testing/: Dockerfile  __init__.py  main.py  test_runner.py  testing_agent.py
app/routes/: general.py  status.py
bot/: __init__.py  config.py  main.py  run_bot.py  safety_commands.py  simple_main.py  utils.py
data/: local_test.db  safety_monitor.db  task_state.db
database/migrations/: 20250924131148_001_add_users_table.sql  20250924131321_001_create_users_authentication_table.sql
database/models/: agent.py  base.py  logs.py  task.py
deploy/: health-check.sh  pi-setup.sh  prometheus.yml
deploy/postgres-init/: 01-init.sql
dev_bible/: README.md  __init__.py  reader.py
dev_bible/automation_hub/: agent_roles.md  architecture.md  current_priorities.md
dev_bible/core/: _agent_quick_start.md  coding_standards.md  communication.md  debugging_protocols.md  security_rules.md  workflow_process.md
docs/: BASE_AGENT_USAGE_GUIDE.md  DISCORD_APPROVAL_WORKFLOW.md  DISCORD_BOT_GUIDE.md  ORCHESTRATOR_CLARIFICATION_FIX.md  ORCHESTRATOR_CLIENT_SUMMARY.md  SHORT_TASK_ID_IMPLEMENTATION.md  SPECIALIZED_AGENTS_GUIDE.md  TESTING_AGENT_DOCUMENTATION.md  VALIDATION.md
examples/: backend_agent_integration.py  backend_agent_setup.py  base_agent_integration_demo.py  dev_bible_reader_demo.py  discord_approval_workflow.py  discord_bot_demo.py  discord_demo.py  github_client_usage.py  orchestrator_client_usage.py  specialized_agents_demo.py  task_executor_usage.py  testing_agent_demo.py  testing_agent_simple_demo.py
scripts/: check_testing_agent.py  init_database.py  monitor_testing_agent.py  validate_deployment.py  validate_discord_implementation.py  validate_testing_agent.py
tests/: __init__.py  conftest.py  test_agents.py  test_create_a_simple_api_status_endpoint_that_returns.py  test_create_a_simple_sudoku_game_at_the_endpoint_api_su.py  test_database.py  test_discord_bot.py  utils.py
utils/: __init__.py  dev_bible_reader.py  safe_git_operations.py  task_state_manager.py
